simplify directory structure for composer forked changes to own branch

--- a/composer.json
+++ b/composer.json
@@ -23,5 +23,5 @@
     "autoload": {
         "psr-0": { "Mmoreramerino\\GearmanBundle": "Mmoreramerino/GearmanBundle/lib/" }
     },
-    "target-dir": "Mmoreramerino/GearmanBundle"
+    "target-dir": ""
 }
