--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.3.2",
         "symfony/framework-bundle": ">=2.0",
-		"liip/doctrine-cache-bundle": "dev-master"
+	"liip/doctrine-cache-bundle": "~1.0"
     },
     "autoload": {
         "psr-0": { "Mmoreramerino\\GearmanBundle": "lib/" }
